@@ -20,21 +20,22 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>zeppelin</artifactId>
+    <artifactId>interpreter-parent</artifactId>
     <groupId>org.apache.zeppelin</groupId>
-    <version>0.8.0-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>0.9.0-SNAPSHOT</version>
+    <relativePath>../interpreter-parent</relativePath>
   </parent>
 
   <groupId>org.apache.zeppelin</groupId>
   <artifactId>zeppelin-flink_2.10</artifactId>
   <packaging>jar</packaging>
-  <version>0.8.0-SNAPSHOT</version>
+  <version>0.9.0-SNAPSHOT</version>
   <name>Zeppelin: Flink</name>
   <description>Zeppelin flink support</description>
 
   <properties>
     <!--library versions-->
+    <interpreter.name>flink</interpreter.name>
     <flink.version>1.1.3</flink.version>
     <flink.akka.version>2.3.7</flink.akka.version>
     <scala.macros.version>2.0.1</scala.macros.version>
@@ -153,195 +154,150 @@
 
       <!-- Scala Compiler -->
       <plugin>
-	<groupId>net.alchim31.maven</groupId>
-	<artifactId>scala-maven-plugin</artifactId>
-	<version>${plugin.scalamaven.version}</version>
-	<executions>
-	  <!-- Run scala compiler in the process-resources phase, so that dependencies on
-	       scala classes can be resolved later in the (Java) compile phase -->
-	  <execution>
-	    <id>scala-compile-first</id>
-	    <phase>process-resources</phase>
-	    <goals>
-	      <goal>compile</goal>
-	    </goals>
-	  </execution>
-          
-	  <!-- Run scala compiler in the process-test-resources phase, so that dependencies on
-	       scala classes can be resolved later in the (Java) test-compile phase -->
-	  <execution>
-	    <id>scala-test-compile</id>
-	    <phase>process-test-resources</phase>
-	    <goals>
-	      <goal>testCompile</goal>
-	    </goals>
-	  </execution>
-	</executions>
-	<configuration>
-	  <jvmArgs>
-	    <jvmArg>-Xms128m</jvmArg>
-	    <jvmArg>-Xmx512m</jvmArg>
-	  </jvmArgs>
-	  <compilerPlugins combine.children="append">
-	    <compilerPlugin>
-	      <groupId>org.scalamacros</groupId>
-	      <artifactId>paradise_${scala.version}</artifactId>
-	      <version>${scala.macros.version}</version>
-	    </compilerPlugin>
-	  </compilerPlugins>
-	</configuration>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>${plugin.scalamaven.version}</version>
+        <executions>
+          <!-- Run scala compiler in the process-resources phase, so that dependencies on
+               scala classes can be resolved later in the (Java) compile phase -->
+          <execution>
+            <id>scala-compile-first</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+
+          <!-- Run scala compiler in the process-test-resources phase, so that dependencies on
+               scala classes can be resolved later in the (Java) test-compile phase -->
+          <execution>
+            <id>scala-test-compile</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jvmArgs>
+            <jvmArg>-Xms128m</jvmArg>
+            <jvmArg>-Xmx512m</jvmArg>
+          </jvmArgs>
+          <compilerPlugins combine.children="append">
+            <compilerPlugin>
+              <groupId>org.scalamacros</groupId>
+              <artifactId>paradise_${scala.version}</artifactId>
+              <version>${scala.macros.version}</version>
+            </compilerPlugin>
+          </compilerPlugins>
+        </configuration>
       </plugin>
 
       <!-- Eclipse Integration -->
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-eclipse-plugin</artifactId>
-	<version>${plugin.eclipse.version}</version>
-	<configuration>
-	  <downloadSources>true</downloadSources>
-	  <projectnatures>
-	    <projectnature>org.scala-ide.sdt.core.scalanature</projectnature>
-	    <projectnature>org.eclipse.jdt.core.javanature</projectnature>
-	  </projectnatures>
-	  <buildcommands>
-	    <buildcommand>org.scala-ide.sdt.core.scalabuilder</buildcommand>
-	  </buildcommands>
-	  <classpathContainers>
-	    <classpathContainer>org.scala-ide.sdt.launching.SCALA_CONTAINER</classpathContainer>
-	    <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
-	  </classpathContainers>
-	  <!-- excludes>
-	    <exclude>org.scala-lang:scala-library</exclude>
-	    <exclude>org.scala-lang:scala-compiler</exclude>
-	  </excludes -->
-	  <sourceIncludes>
-	    <sourceInclude>**/*.scala</sourceInclude>
-	    <sourceInclude>**/*.java</sourceInclude>
-	  </sourceIncludes>
-	</configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>${plugin.eclipse.version}</version>
+        <configuration>
+          <downloadSources>true</downloadSources>
+          <projectnatures>
+            <projectnature>org.scala-ide.sdt.core.scalanature</projectnature>
+            <projectnature>org.eclipse.jdt.core.javanature</projectnature>
+          </projectnatures>
+          <buildcommands>
+            <buildcommand>org.scala-ide.sdt.core.scalabuilder</buildcommand>
+          </buildcommands>
+          <classpathContainers>
+            <classpathContainer>org.scala-ide.sdt.launching.SCALA_CONTAINER</classpathContainer>
+            <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
+          </classpathContainers>
+          <!-- excludes>
+            <exclude>org.scala-lang:scala-library</exclude>
+            <exclude>org.scala-lang:scala-compiler</exclude>
+          </excludes -->
+          <sourceIncludes>
+            <sourceInclude>**/*.scala</sourceInclude>
+            <sourceInclude>**/*.java</sourceInclude>
+          </sourceIncludes>
+        </configuration>
       </plugin>
 
       <!-- Adding scala source directories to build path -->
       <plugin>
-	<groupId>org.codehaus.mojo</groupId>
-	<artifactId>build-helper-maven-plugin</artifactId>
-	<version>${plugin.buildhelper.version}</version>
-	<executions>
-	  <!-- Add src/main/scala to eclipse build path -->
-	  <execution>
-	    <id>add-source</id>
-	    <phase>generate-sources</phase>
-	    <goals>
-	      <goal>add-source</goal>
-	    </goals>
-	    <configuration>
-	      <sources>
-		<source>src/main/scala</source>
-	      </sources>
-	    </configuration>
-	  </execution>
-	  <!-- Add src/test/scala to eclipse build path -->
-	  <execution>
-	    <id>add-test-source</id>
-	    <phase>generate-test-sources</phase>
-	    <goals>
-	      <goal>add-test-source</goal>
-	    </goals>
-	    <configuration>
-	      <sources>
-		<source>src/test/scala</source>
-	      </sources>
-	    </configuration>
-	  </execution>
-	</executions>
-      </plugin>
-
-      <plugin>
-	<groupId>org.scalastyle</groupId>
-	<artifactId>scalastyle-maven-plugin</artifactId>
-	<version>${plugin.scalastyle.version}</version>
-	<executions>
-	  <execution>
-	    <goals>
-	      <goal>check</goal>
-	    </goals>
-	  </execution>
-	</executions>
-	<configuration>
-	  <verbose>false</verbose>
-	  <failOnViolation>true</failOnViolation>
-	  <includeTestSourceDirectory>true</includeTestSourceDirectory>
-	  <failOnWarning>false</failOnWarning>
-	  <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
-	  <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-	  <configLocation>${project.basedir}/../_tools/scalastyle.xml</configLocation>
-	  <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile>
-	  <outputEncoding>UTF-8</outputEncoding>
-	</configuration>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-enforcer-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>${plugin.buildhelper.version}</version>
         <executions>
+          <!-- Add src/main/scala to eclipse build path -->
           <execution>
-            <id>enforce</id>
-            <phase>none</phase>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+            <source>src/main/scala</source>
+              </sources>
+            </configuration>
+          </execution>
+          <!-- Add src/test/scala to eclipse build path -->
+          <execution>
+            <id>add-test-source</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+            <source>src/test/scala</source>
+              </sources>
+            </configuration>
           </execution>
         </executions>
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+        <version>${plugin.scalastyle.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <verbose>false</verbose>
+          <failOnViolation>true</failOnViolation>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <failOnWarning>false</failOnWarning>
+          <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
+          <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
+          <configLocation>${project.basedir}/../_tools/scalastyle.xml</configLocation>
+          <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile>
+          <outputEncoding>UTF-8</outputEncoding>
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/../../interpreter/flink</outputDirectory>
-              <overWriteReleases>false</overWriteReleases>
-              <overWriteSnapshots>false</overWriteSnapshots>
-              <overWriteIfNewer>true</overWriteIfNewer>
-              <includeScope>runtime</includeScope>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy-artifact</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/../../interpreter/flink</outputDirectory>
-              <overWriteReleases>false</overWriteReleases>
-              <overWriteSnapshots>false</overWriteSnapshots>
-              <overWriteIfNewer>true</overWriteIfNewer>
-              <includeScope>runtime</includeScope>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>${project.groupId}</groupId>
-                  <artifactId>${project.artifactId}</artifactId>
-                  <version>${project.version}</version>
-                  <type>${project.packaging}</type>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
+        <artifactId>maven-enforcer-plugin</artifactId>
       </plugin>
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
